--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "gphapiservice",
   "version": "1.0.0",
   "description": "Appartment Application service",
-  "main": "app.js",
+  "main": "app.js",  
   "scripts": {
+    "start" : "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "venky",
