--- a/package.json
+++ b/package.json
@@ -2,19 +2,20 @@
   "name": "gphapiservice",
   "version": "1.0.0",
   "description": "Appartment Application service",
-  "main": "app.js",  
+  "main": "app.js",
   "scripts": {
-    "start" : "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "gulp",
+    "test": "IP=0.0.0.0 PORT=3000 gulp-test --timeout 5000 test/*.test.js"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/venky252003/GPH_APIService.git"
-  },  
+  },
   "author": "venky",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "ejs": "^2.5.6",
     "express": "^4.15.3",
     "gulp": "^3.9.1",
     "gulp-mocha": "^4.3.1",
@@ -23,5 +24,9 @@
     "mongoose-relationship": "^0.1.5",
     "should": "^11.2.1",
     "sinon": "^2.3.2"
-  }
+  },
+  "bugs": {
+    "url": "http://github.com/venky252003/GPH_APIService/issues"
+  },
+  "homepage": "http://github.com/venky252003/GPH_APIService"
 }
